# memoir_montage

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
compilation_maker/: __init__.py  __main__.py  app.py  cli.py  events.py  paths.py  settings.py  telemetry.py
compilation_maker/analyzers/: device.py  face.py  frames.py  motion.py  nsfw.py  vad.py
compilation_maker/compile/: compiler.py  concat.py  filtergraph.py  segment.py  selector.py  source_filter.py
compilation_maker/index/: cache.py  enumerate.py  indexer.py  probe.py
compilation_maker/web/: app.css  app.js  index.html
tests/: test_enumerate.py  test_filtergraph.py  test_frames.py  test_pool_stats.py  test_probe.py  test_selector.py  test_settings.py  test_source_filter.py
